# metal-experiments

./: Cargo.toml
apps/inline-rt/: Cargo.toml
apps/inline-rt-hlsl/: Cargo.toml
apps/inline-rt-hlsl/src/: main.rs
apps/inline-rt/src/: main.rs
apps/pipeline-compilation/: Cargo.toml
apps/pipeline-compilation/src/: egui_render.ps.dxil  egui_render.ps.hlsl  egui_render.vs.dxil  egui_render.vs.hlsl  main.rs
apps/pipeline-rt/: Cargo.toml
apps/pipeline-rt-hlsl/: Cargo.toml
apps/pipeline-rt-hlsl/src/: example.rchit.dxil  example.rchit.hlsl  example.rgen.dxil  example.rgen.hlsl  example.rmiss.dxil  example.rmiss.hlsl  main.rs
src/: main.rs
